feat: JEP 439 info
related to JEP 474